--- a/src/app/details/details.page.scss
+++ b/src/app/details/details.page.scss
@@ -1,32 +1,24 @@
-.welcome-card ion-img {
-    max-height: 35vh;
-    overflow: hidden;
-  }
-  .App {
+.about-header {
+    background-color: var(--ion-color-light);
+    padding: 16px;
+    width: 100%;
+    height: 30%;
     text-align: center;
   }
   
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
+  .about-header img {
+    max-height: 100%;
   }
   
-  .App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
-    color: white;
+  .about-info p {
+    color: var(--ion-color-dark);
+    text-align: left;
   }
   
-  .App-title {
-    font-size: 1.5em;
+  .about-info ion-icon {
+    margin-inline-end: 32px;
   }
   
-  .App-intro {
-    font-size: large;
-  }
-  
-  @keyframes App-logo-spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+  .ios .about-info {
+    text-align: center;
   }
