--- a/src/app/collections-list/collections-list.component.html
+++ b/src/app/collections-list/collections-list.component.html
@@ -1,3 +1,33 @@
-<p>
-  collections-list works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="dismiss()">Cancel</ion-button>
+    </ion-buttons>
+
+    <ion-title>
+      Filter Sessions
+    </ion-title>
+
+  </ion-toolbar>
+</ion-header>
+
+<ion-content class="outer-content">
+<ion-list>
+  <ion-item *ngFor="let collection of collections">
+    <span slot="start" class="dot"></span>
+    <ion-label>{{collection.name}}</ion-label>
+  </ion-item>
+
+  <ion-item>
+    <form action="">
+        <ion-input 
+        type='text' 
+        placeholder="Password"
+        class="form-control form-control-lg"></ion-input>
+        <ion-button expand="block" shape="round" fill="outline" type="submit">
+            <ion-icon name="person"></ion-icon>Crear una nueva coleción
+        </ion-button>
+    </form>
+   
+  </ion-item>
+</ion-list>
