--- a/src/app/collections-list/collections-list.component.html
+++ b/src/app/collections-list/collections-list.component.html
@@ -1,28 +1,40 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color='dark'>
     <ion-buttons slot="start">
-      <ion-button (click)="dismiss()">Cancel</ion-button>
+      <ion-button (click)="dismiss()">
+        <ion-icon name='arrow-back'></ion-icon>
+      </ion-button>
     </ion-buttons>
 
-    <ion-title>
-      Filter Sessions
-    </ion-title>
+    <ion-title slot="end" >
+      Coleciones
+     </ion-title>
 
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="outer-content">
-<ion-list>
-  <ion-item *ngFor="let collection of collections">
+
+    <ion-item *ngIf="collections.length > 0">
+        <p>No hi han colecions </p>
+      </ion-item> 
+
+<ion-list *ngIf="collections.length === 0" >
+  <ion-item  *ngFor="let collection of collections">
     <span slot="start" class="dot"></span>
     <ion-label>{{collection.name}}</ion-label>
   </ion-item>
 
-  <ion-item>
-    <form action="">
+   
+</ion-list>
+
+<ion-item>
+    <form formGroup]="authForm" (ngSubmit)="submitForm()">
         <ion-input 
         type='text' 
-        placeholder="Password"
+        placeholder="Nombre de la coleción"
+        formControlName="collectionname"
+        placeholder="Username"
         class="form-control form-control-lg"></ion-input>
         <ion-button expand="block" shape="round" fill="outline" type="submit">
             <ion-icon name="person"></ion-icon>Crear una nueva coleción
@@ -30,4 +42,3 @@
     </form>
    
   </ion-item>
-</ion-list>
