--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -1,6 +1,17 @@
-ion-slides.film-slider {
-    ion-chip { 
-        width:100%;
-        text-align: center;                              
+
+.container{
+    display: inline-block;
+    overflow: auto;
+    max-height: 25px;
+    max-width: 100%;
+    li{
+        text-decoration: none;
+        list-style: none;
+        display: block;
+        ion-chip{
+            width: auto;
+            text-align: center;
+        }
     }
+    
 }
